--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -1,5 +1,5 @@
 <h1>Order a Pizza</h1>
-
+<h2>{{ note }}</h2>
 <form action="{% url 'order' %}" method="post">
     {% csrf_token %}
     {{ pizzaform }}
